RESOLVED FIXED116639
Fix assertion in the getComputedStyle-background-shorthand.html test
https://bugs.webkit.org/show_bug.cgi?id=116639
Summary Fix assertion in the getComputedStyle-background-shorthand.html test
Simon Fraser (smfr)
Reported 2013-05-22 15:08:59 PDT
Fix assertion in the getComputedStyle-background-shorthand.html test
Attachments
Patch (2.51 KB, patch)
2013-05-22 15:13 PDT, Simon Fraser (smfr)
rniwa: review+
Simon Fraser (smfr)
Comment 1 2013-05-22 15:13:15 PDT
Ryosuke Niwa
Comment 2 2013-05-22 15:16:21 PDT
Comment on attachment 202627 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=202627&action=review > Source/WebCore/rendering/RenderObject.cpp:2527 > + if (!isText()) { I wish we had a way to assert that this is the only case we have to worry about.
Simon Fraser (smfr)
Comment 3 2013-05-22 15:19:20 PDT
Note You need to log in before you can comment on or make changes to this bug.